--- a/AzarKandidaV2/Web.config
+++ b/AzarKandidaV2/Web.config
@@ -19,7 +19,7 @@
   </appSettings>
   <system.web>
 	  <authentication mode="Forms">
-		  <forms name="AminWeb" defaultUrl="/" loginUrl="/" timeout="43200" />
+		  <forms name="AminWeb" defaultUrl="/" loginUrl="/Account/Index" timeout="43200" />
 	  </authentication>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
