--- a/AzarKandidaV2/AzarKandidaV2.csproj
+++ b/AzarKandidaV2/AzarKandidaV2.csproj
@@ -1800,6 +1800,7 @@
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Content\fonts\webfonts\" />
     <Folder Include="Models\" />
+    <Folder Include="NewFolder1\" />
     <Folder Include="Resources\Images\Thumb\" />
   </ItemGroup>
   <ItemGroup>
