--- a/AzarKandidaV2/AzarKandidaV2.csproj
+++ b/AzarKandidaV2/AzarKandidaV2.csproj
@@ -138,8 +138,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\CheckContentImage.cs" />
     <Compile Include="Utilities\ImageResizer.cs" />
+    <Compile Include="Utilities\Shuffle.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="404.html" />
     <Content Include="Areas\Admin\Content\bootstrap\css\bootstrap-grid.css" />
     <Content Include="Areas\Admin\Content\bootstrap\css\bootstrap-grid.min.css" />
     <Content Include="Areas\Admin\Content\bootstrap\css\bootstrap-reboot.css" />
@@ -1766,17 +1768,10 @@
     <Content Include="Content\css\Index.min.css">
       <DependentUpon>Index.css</DependentUpon>
     </Content>
-    <Content Include="Content\img\1.jpg" />
-    <Content Include="Content\img\2.jpg" />
-    <Content Include="Content\img\3.jpg" />
-    <Content Include="Content\img\4.jpg" />
     <Content Include="Content\img\Enamad.png" />
-    <Content Include="Content\img\5.jpg" />
-    <Content Include="Content\img\6.jpg" />
-    <Content Include="Content\img\7.jpg" />
-    <Content Include="Content\img\8.jpg" />
-    <Content Include="Content\img\9.jpg" />
+    <Content Include="Content\img\home.png" />
     <Content Include="Content\img\Men.png" />
+    <Content Include="Content\img\Untitled-1.svg" />
     <Content Include="Content\js\bootstrap.js" />
     <Content Include="Content\js\bootstrap.min.js" />
     <Content Include="Content\js\masonry.js" />
