--- a/AzarKandidaV2/Web.config
+++ b/AzarKandidaV2/Web.config
@@ -23,7 +23,20 @@
 	  </authentication>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
+	  <!--errorPage-->
+	  <customErrors mode="On" defaultRedirect="error.html">
+		  <error statusCode="404" redirect="404.html" />
+	  </customErrors>
+	  <!--errorPage-->
   </system.web>
+	<system.webServer>
+		<!--errorPage-->
+		<httpErrors errorMode="DetailedLocalOnly" defaultPath="404.html" defaultResponseMode="ExecuteURL">
+			<remove statusCode="404" subStatusCode="-1" />
+			<error statusCode="404" prefixLanguageFilePath="" path="404.html" responseMode="ExecuteURL" />
+		</httpErrors>
+		<!--errorPage-->
+	</system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
