--- a/AzarKandidaV2/AzarKandidaV2.csproj
+++ b/AzarKandidaV2/AzarKandidaV2.csproj
@@ -1771,11 +1771,14 @@
     <Content Include="Content\img\Enamad.png" />
     <Content Include="Content\img\home.png" />
     <Content Include="Content\img\Men.png" />
+    <Content Include="Content\img\Men2.png" />
     <Content Include="Content\img\Untitled-1.svg" />
     <Content Include="Content\js\bootstrap.js" />
     <Content Include="Content\js\bootstrap.min.js" />
     <Content Include="Content\js\masonry.js" />
-    <Content Include="Content\svg\Logo.svg" />
+    <Content Include="Content\svg\Arvintav.svg" />
+    <Content Include="Content\svg\Azarkandida.svg" />
+    <Content Include="Content\svg\Men.svg" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
