--- a/AzarKandidaV2/AzarKandidaV2.csproj
+++ b/AzarKandidaV2/AzarKandidaV2.csproj
@@ -1789,6 +1789,7 @@
     <Content Include="Content\svg\Men.svg" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Resources\Images\Image1.jpeg" />
     <Content Include="Scripts\ckeditor\adapters\jquery.js" />
     <Content Include="Scripts\ckeditor\build-config.js" />
     <Content Include="Scripts\ckeditor\CHANGES.html" />
